--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.12",
   "description": "Apollo Link for Kappa Views.",
   "repository": "https://github.com/wirelineio/dsuite",
-  "license": "UNLICENSED",
+  "license": "GPL-3.0",
   "main": "src/index",
   "module": "dist/es/index",
   "scripts": {
@@ -32,5 +32,8 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.11.0",
     "jest": "^24.7.1"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
