--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "@babel/plugin-proposal-class-properties": "^7.3.0",
     "@babel/preset-env": "^7.0.0",
     "babel-eslint": "^10.0.1",
-    "eslint": "^5.11.0",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.17.2",
     "jest": "^24.7.1"
   },
   "publishConfig": {
